# cmakegen

./: CMakeLists.txt  PKGBUILD  README.md
src/: cmakegenerator.h  cmdoptionparser.h  iohandler.h  main.cpp  projectbuilder.h
src/cmake/: cmakefile.h  cmakefunction.h  cmakefunctioncriteria.h
src/cmake/impl/: cmakefile.cpp  cmakeformatter.cpp  cmakeformatter.h  cmakefunction.cpp  cmakefunctioncriteria.cpp  cmakescanner.cpp  cmakescanner.h  constants.h
src/file_utils/: directory.h  fileutils.h  ignorefile.h
src/file_utils/impl/: cmakedirectoryentry.cpp  cmakedirectoryentry.h  directory.cpp  fileutils.cpp  ignorefile.cpp
src/impl/: cmakegenerator.cpp  cmdoptionparser.cpp  projectbuilder.cpp
